# Image-Filtering

./: .gitignore  CMakeLists.txt  Makefile  README.md  env.sh  mpi.org  mpi_omp.org  notes.org  prof_mpi.py  prof_mpi_omp.py  run_test.sh  sobelf
include/: cuda_util.cuh  cuda_util.h  gif.h  gif_hash.h  gif_lib.h  gif_lib_private.h  mpi_util.h
src/: cuda_util.cu  dgif_lib.c  egif_lib.c  gif.c  gif_err.c  gif_font.c  gif_hash.c  gifalloc.c  main.c  mpi_util.c  openbsd-reallocarray.c  quantize.c
